wrap and readme fix

--- a/css/styles-fixed.css
+++ b/css/styles-fixed.css
@@ -13,6 +13,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  flex-wrap: wrap;
   z-index: 3;
 }
 #sidebar {
